# player

./: .gitignore  .gitmodules  DESIGN.md  README.md  SYNC_MERKLE.md  TRACK_SOURCE_PLAN.md  ideas.md  package.json  patch_lib.py  patch_track.py  pnpm-lock.yaml
.cargo/: config.toml
.github/actions/generate-release-notes/: action.yml  index.cjs  index.js
.github/workflows/: regenerate-changelog.yml  release.yml  tag-version.yml
public/zippi-sprites/: README.md  logo.kra  zippi-introduce.webp-autosave.kra  zippi_boring.kra  zippi_boring.webp~  zippi_boring_click_down.kra  zippi_boring_click_down.webp~  zippi_boring_points_down.kra  zippi_falling.kra  zippi_falling.webp~  zippi_hands_up.webp~  zippi_left.kra  zippi_peek_up.kra  zippi_sit_chill.kra  zippi_up.kra
scripts/: generate-updater-manifest.mjs  resolve-adb-serial.sh  sync-version.mjs
src/: App.vue  main.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  view.xml
src-tauri/capabilities/: default.json  desktop-updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: about.rs  audio.rs  demo.rs  discovery.rs  identify.rs  import.rs  lib.rs  library.rs  main.rs  playback.rs  soulseek.rs  sync.rs
src/components/: AppSidebar.vue  AppTopbar.vue  PlayerBar.vue  ResponsivePopup.vue  WebGLAlbumRenderer.vue
src/utils/: format.ts  rarity.ts  tracks.ts
