[package]
name = "player"
version = "0.2.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.17.3"
rusqlite = { version = "0", features = ["bundled"] }
lofty = "0"
notify = "6"
walkdir = "2"
base64 = "0.22"
blake3 = "1"
symphonia = { version = "0.5", features = ["all"] }
rustfft = "6"
rusty-chromaprint = "0.3"
flate2 = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde_urlencoded = "0.7"
tiny_http = "0.12"
mdns-sd = "0.11"
hostname = "0.4"
whoami = "1"
soulseek_rs = { package = "soulseek-rs-lib", path = "vendor/soulseek-rs-lib", features = ["tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

